--- a/onboarding-checklist/src/signup.css
+++ b/onboarding-checklist/src/signup.css
@@ -12,6 +12,8 @@ body {
 	flex-direction: column;
 	font-family: 'Adelle', sans-serif;
 	margin: 0px 0 0px;
+	padding-top: 5%;
+	padding-bottom: 5%;
 }
 
 h1 {
